Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Holiday_brought_forward__c.field-meta.xml
<CustomField>
    <fullName>Holiday_brought_forward__c</fullName>
    <label>Holiday brought forward</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>