Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Holiday_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Entitlement__c</fullName>
    <label>Annual Holiday Entitlement</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>