Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Holiday_Taken__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Taken__c</fullName>
    <label>Holiday Taken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>