Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Holiday_year_end__c.field-meta.xml
<CustomField>
    <fullName>Holiday_year_end__c</fullName>
    <label>Holiday year end</label>
    <type>Date</type>
</CustomField>