Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/HolidayEndDate__c.field-meta.xml
<CustomField>
    <fullName>HolidayEndDate__c</fullName>
    <label>HolidayEndDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>