Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/HolidayStartDate__c.field-meta.xml
<CustomField>
    <fullName>HolidayStartDate__c</fullName>
    <label>HolidayStartDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>