Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/ID_Time_Limited__c.field-meta.xml
<CustomField>
    <fullName>ID_Time_Limited__c</fullName>
    <label>ID Time Limited</label>
    <length>255</length>
    <type>Text</type>
</CustomField>