Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Ideal_Hours__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Hours__c</fullName>
    <label>Ideal Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>