Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Indefinite_PORTW__c.field-meta.xml
<CustomField>
    <fullName>Indefinite_PORTW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indefinite PORTW</label>
    <type>Checkbox</type>
</CustomField>