Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <label>Initials</label>
    <length>20</length>
    <type>Text</type>
</CustomField>