Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Interview_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Interview_Adjustments__c</fullName>
    <label>Interview Adjustments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>