Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Interview_Availability__c.field-meta.xml
<CustomField>
    <fullName>Interview_Availability__c</fullName>
    <label>Interview Availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>