Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Interview_Conducted_By__c.field-meta.xml
<CustomField>
    <fullName>Interview_Conducted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Conducted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>People</relationshipName>
    <type>Lookup</type>
</CustomField>