Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Interview_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date_time__c</fullName>
    <label>Interview Date/time</label>
    <type>DateTime</type>
</CustomField>