Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Interview_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interview_Notes__c</fullName>
    <label>Interview Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>