Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_18DigitID__c.field-meta.xml
<CustomField>
    <fullName>IP_18DigitID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce 18 digit ID</label>
    <type>Text</type>
</CustomField>