Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_2nd_Tier_Supplier__c.field-meta.xml
<CustomField>
    <fullName>IP_2nd_Tier_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Tier Supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>2nd Tier Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (2nd Tier Supplier)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>