Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_2ndTierAutoID__c.field-meta.xml
<CustomField>
    <fullName>IP_2ndTierAutoID__c</fullName>
    <displayFormat>IT{00000000}</displayFormat>
    <label>2nd Tier Auto ID</label>
    <type>AutoNumber</type>
</CustomField>