Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_48hrWaverSigned__c.field-meta.xml
<CustomField>
    <fullName>IP_48hrWaverSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag field to monitor if a 48hr wave has been signed. This should be a system controlled field</description>
    <label>48hr Waiver Signed</label>
    <type>Checkbox</type>
</CustomField>