Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_ActiveCompleteLTD__c.field-meta.xml
<CustomField>
    <fullName>IP_ActiveCompleteLTD__c</fullName>
    <label>Active complete LTD profile(s)</label>
    <summaryFilterItems>
        <field>IP_PayProfile__c.IP_MissingPayrollDetail__c</field>
        <operation>equals</operation>
        <value>&quot;&quot;</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>IP_PayProfile__c.IP_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>IP_PayProfile__c.IP_Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>