Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_ActivePayProfiles__c.field-meta.xml
<CustomField>
    <fullName>IP_ActivePayProfiles__c</fullName>
    <label>Active Pay Profiles</label>
    <summaryFilterItems>
        <field>IP_PayProfile__c.IP_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>IP_PayProfile__c.P45_Requested__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>IP_PayProfile__c.IP_Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>