Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Alias__c.field-meta.xml
<CustomField>
    <fullName>IP_Alias__c</fullName>
    <formula>MID(Id, 11, 3) &amp; Right(FirstName, 2)&amp; Text( MILLISECOND(TIMENOW()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alias</label>
    <type>Text</type>
</CustomField>