Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_AvailableforRecontact__c.field-meta.xml
<CustomField>
    <fullName>IP_AvailableforRecontact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Available for Recontact?</label>
    <type>Checkbox</type>
</CustomField>