Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_AWRType__c.field-meta.xml
<CustomField>
    <fullName>IP_AWRType__c</fullName>
    <description>define if a worker has a derogated contact or should be evaluated for AWR</description>
    <inlineHelpText>define if a worker has a derogated contact or should be evaluated for AWR</inlineHelpText>
    <label>AWR type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWR in Scope</fullName>
                <default>true</default>
                <label>AWR in Scope</label>
            </value>
            <value>
                <fullName>Derogated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>