Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_BorrowedTemp__c.field-meta.xml
<CustomField>
    <fullName>IP_BorrowedTemp__c</fullName>
    <inlineHelpText>Only Yes if you are borrowing a temp from another branch</inlineHelpText>
    <label>Borrowed Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>