Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Branch__c.field-meta.xml
<CustomField>
    <fullName>IP_Branch__c</fullName>
    <formula>TEXT( Owner.IP_TempestDepartment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch</label>
    <type>Text</type>
</CustomField>