Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_BusinessFunction__c.field-meta.xml
<CustomField>
    <fullName>IP_BusinessFunction__c</fullName>
    <label>Business Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Support Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>