Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_CandidateIDlegacy__c.field-meta.xml
<CustomField>
    <fullName>IP_CandidateIDlegacy__c</fullName>
    <description>this is used for candidate that are being migrated from other system but their original IDs must be preserved</description>
    <externalId>true</externalId>
    <inlineHelpText>IF a candidate must still be reference by an original ID (for payroll) used this field</inlineHelpText>
    <label>Candidate ID (Legacy)</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>