Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_CategoryOfWork__c.field-meta.xml
<CustomField>
    <fullName>IP_CategoryOfWork__c</fullName>
    <description>Which business areas does the person work in</description>
    <inlineHelpText>Which business areas does the person work in</inlineHelpText>
    <label>Category of Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IP_Business_Type</valueSetName>
    </valueSet>
</CustomField>