Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_CategoryOfWorkFormula__c.field-meta.xml
<CustomField>
    <fullName>IP_CategoryOfWorkFormula__c</fullName>
    <formula>IF( INCLUDES( IP_CategoryOfWork__c , &quot;Catering&quot;) ,&quot;Catering, &quot;, &quot;&quot;)&amp;
IF( INCLUDES( IP_CategoryOfWork__c , &quot;Industrial&quot;) ,&quot;Industrial, &quot;, &quot;&quot;)&amp;
IF( INCLUDES( IP_CategoryOfWork__c , &quot;Office&quot;) ,&quot;Office, &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category of Work (formula)</label>
    <type>Text</type>
</CustomField>