Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_CategoryOfWorkString__c.field-meta.xml
<CustomField>
    <fullName>IP_CategoryOfWorkString__c</fullName>
    <label>Category of Work (String)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>