Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_CitizenshipGroup__c.field-meta.xml
<CustomField>
    <fullName>IP_CitizenshipGroup__c</fullName>
    <label>Citizenship Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>