Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_CompleteReferences__c.field-meta.xml
<CustomField>
    <fullName>IP_CompleteReferences__c</fullName>
    <label>Complete References</label>
    <summaryFilterItems>
        <field>ts2__Reference__c.ts2__Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>ts2__Reference__c.ts2__Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>