Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_ComplianceConfirmedBy2ndTier__c.field-meta.xml
<CustomField>
    <fullName>IP_ComplianceConfirmedBy2ndTier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Confirmed by 2nd Tier</label>
    <type>Checkbox</type>
</CustomField>