Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_ComplianceGraphic__c.field-meta.xml
<CustomField>
    <fullName>IP_ComplianceGraphic__c</fullName>
    <formula>IF(Compliance_Status__c = &apos;Inactive Candidate&apos;,IMAGE(&quot;/resource/Img/I.png&quot;, &quot;&quot;),
   IF(Compliance_Status__c=&apos;Borrowed Temp&apos;,IMAGE(&quot;/resource/Img/B.png&quot;, &quot;&quot;),
      IF(Compliance_Status__c=&apos;Compliant&apos;,IMAGE(&quot;/resource/Img/C.png&quot;, &quot;&quot;),
	     IF(Compliance_Status__c=&apos;Partial Compliant&apos;,IMAGE(&quot;/resource/Img/P.png&quot;, &quot;&quot;),
		    IF(Compliance_Status__c=&apos;Not Compliant&apos;,IMAGE(&quot;/resource/Img/N.png&quot;, &quot;&quot;),
			   &quot;Error&quot;
			  )
		   )
		)
      )
  )</formula>
    <label>Compliance Graphic</label>
    <type>Text</type>
</CustomField>