Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Consent_entered_by__c.field-meta.xml
<CustomField>
    <fullName>IP_Consent_entered_by__c</fullName>
    <label>Consent Updated by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>