Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Consent_from_Data_Store__c.field-meta.xml
<CustomField>
    <fullName>IP_Consent_from_Data_Store__c</fullName>
    <label>Consent Last Updated</label>
    <type>DateTime</type>
</CustomField>