Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Consentupdatedviaform__c.field-meta.xml
<CustomField>
    <fullName>IP_Consentupdatedviaform__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent updated via form</label>
    <type>Checkbox</type>
</CustomField>