Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_ConsultantsTempestID__c.field-meta.xml
<CustomField>
    <fullName>IP_ConsultantsTempestID__c</fullName>
    <formula>Owner.IP_TempestID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consultants Tempest ID</label>
    <type>Text</type>
</CustomField>