Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_ContactType__c.field-meta.xml
<CustomField>
    <fullName>IP_ContactType__c</fullName>
    <description>Type of business contact</description>
    <inlineHelpText>What are the responsibilities the contact hold</inlineHelpText>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Contact</fullName>
            </value>
            <value>
                <fullName>Budget Holder</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Invoice Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>