Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Continuous_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Continuous_Service_Date__c</fullName>
    <label>Continuous Service Date</label>
    <type>Date</type>
</CustomField>