Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Conviction__c.field-meta.xml
<CustomField>
    <fullName>IP_Conviction__c</fullName>
    <label>Conviction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>