Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Criminal_Conviction__c.field-meta.xml
<CustomField>
    <fullName>IP_Criminal_Conviction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criminal Conviction</label>
    <type>Checkbox</type>
</CustomField>