Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_DateAvailableforRecontact__c.field-meta.xml
<CustomField>
    <fullName>IP_DateAvailableforRecontact__c</fullName>
    <label>Date Available for Recontact</label>
    <type>Date</type>
</CustomField>