Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Department__c.field-meta.xml
<CustomField>
    <fullName>IP_Department__c</fullName>
    <formula>Owner.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>