Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_DepartmentNoNeed__c.field-meta.xml
<CustomField>
    <fullName>IP_DepartmentNoNeed__c</fullName>
    <defaultValue>&quot;1069&quot;</defaultValue>
    <description>Tempest division value storage</description>
    <label>Department</label>
    <length>4</length>
    <type>Text</type>
</CustomField>