Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Division__c.field-meta.xml
<CustomField>
    <fullName>IP_Division__c</fullName>
    <defaultValue>&quot;NTS&quot;</defaultValue>
    <description>field to store tempests Division value</description>
    <label>Division</label>
    <length>3</length>
    <type>Text</type>
</CustomField>