Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_EarliestExpiringComplianceDate__c.field-meta.xml
<CustomField>
    <fullName>IP_EarliestExpiringComplianceDate__c</fullName>
    <formula>IF( OR( Passport_Expiration_Date__c &lt;  VISA_Expiration_Date__c ,  ISNULL(VISA_Expiration_Date__c))  , Passport_Expiration_Date__c, VISA_Expiration_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest Expiring Compliance Date</label>
    <type>Date</type>
</CustomField>