Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Email__c.field-meta.xml
<CustomField>
    <fullName>IP_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email</label>
    <type>Checkbox</type>
</CustomField>