Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Equal_Ops__c.field-meta.xml
<CustomField>
    <fullName>IP_Equal_Ops__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equal Ops</label>
    <type>Checkbox</type>
</CustomField>