Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_First_ComplianceDate__c.field-meta.xml
<CustomField>
    <fullName>IP_First_ComplianceDate__c</fullName>
    <label>First Compliance Date</label>
    <type>Date</type>
</CustomField>