Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_FirstPassExternalWorker__c.field-meta.xml
<CustomField>
    <fullName>IP_FirstPassExternalWorker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Pass (External Worker)</label>
    <type>Checkbox</type>
</CustomField>