Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_FirstRecordedTermDate__c.field-meta.xml
<CustomField>
    <fullName>IP_FirstRecordedTermDate__c</fullName>
    <description>populated from workflow via Cert: Study Timetable</description>
    <label>Course Start Date</label>
    <type>Date</type>
</CustomField>