Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_FlagForPassToPayrollFri__c.field-meta.xml
<CustomField>
    <fullName>IP_FlagForPassToPayrollFri__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag for Pass to payroll (fri)</label>
    <type>Checkbox</type>
</CustomField>