Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_FridayPayrollDate__c.field-meta.xml
<CustomField>
    <fullName>IP_FridayPayrollDate__c</fullName>
    <label>Friday Payroll Date</label>
    <type>Date</type>
</CustomField>