Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_GDPRContactedCandidate__c.field-meta.xml
<CustomField>
    <fullName>IP_GDPRContactedCandidate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System field that identifies if a candidate has been contacted under the definition of GDPR.</description>
    <label>GDPR Contacted Candidate</label>
    <type>Checkbox</type>
</CustomField>