Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_GDPRDeleConsentPortalStatus__c.field-meta.xml
<CustomField>
    <fullName>IP_GDPRDeleConsentPortalStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDPR Deletion Consent Portal Status</label>
    <type>Checkbox</type>
</CustomField>