Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_GDPRWorkedCandidate__c.field-meta.xml
<CustomField>
    <fullName>IP_GDPRWorkedCandidate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System field that identifies if a candidate has been worked under the definition for GDPR.</description>
    <label>GDPR Worked Candidate</label>
    <type>Checkbox</type>
</CustomField>