Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Health_Reasonable_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>IP_Health_Reasonable_Adjustments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health/Reasonable Adjustments</label>
    <type>Checkbox</type>
</CustomField>