Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_IncompleteActivePayProfiles__c.field-meta.xml
<CustomField>
    <fullName>IP_IncompleteActivePayProfiles__c</fullName>
    <inlineHelpText>Count of all active pay profiles that are missing details</inlineHelpText>
    <label>Incomplete Active Pay Profiles</label>
    <summaryFilterItems>
        <field>IP_PayProfile__c.IP_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>IP_PayProfile__c.IP_MissingPayrollDetail__c</field>
        <operation>notEqual</operation>
        <value>&quot;&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>IP_PayProfile__c.IP_Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>