Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_InternationalStudentStatus__c.field-meta.xml
<CustomField>
    <fullName>IP_InternationalStudentStatus__c</fullName>
    <formula>IF(AND
			(BEGINS(IP_CitizenshipGroup__c,&quot;Citizen of a&quot;), 
			Student__c = TRUE),
   IF(OR(AND(IP_Term1EndDate__c &gt; (TODAY()+60),
             IP_Term2EndDate__c &gt; (TODAY()+60),
             IP_Term3EndDate__c &gt; (TODAY()+60)
            ),
         IP_StudyComplete__c = TRUE
        ),
      IMAGE(&quot;/servlet/servlet.FileDownload?file=0159E0000009IQP&quot;, &quot;Green&quot;),
      IF(OR(IP_Term1EndDate__c &gt; TODAY(),
             IP_Term2EndDate__c &gt; TODAY(), 
             IP_Term3EndDate__c &gt; TODAY()
             
            ),
         IMAGE(&quot;/servlet/servlet.FileDownload?file=0159E0000009IQU&quot;, &quot;Amber&quot;),
         IMAGE(&quot;/servlet/servlet.FileDownload?file=0159E0000009IQe&quot;, &quot;Red&quot;))
     ),
	 &quot;&quot;
    
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>International Student Status</label>
    <type>Text</type>
</CustomField>