Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_IsInvoicecontact__c.field-meta.xml
<CustomField>
    <fullName>IP_IsInvoicecontact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to only bring through Invoice contacts in filters populated via workflow based on value in the Multi-picklist for Contact Type</description>
    <inlineHelpText>Field used to only bring through Invoice contacts in filters populated via workflow based on value in the Multi-picklist for Contact Type</inlineHelpText>
    <label>Is Invoice contact</label>
    <type>Checkbox</type>
</CustomField>