Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_JobTitle__c.field-meta.xml
<CustomField>
    <fullName>IP_JobTitle__c</fullName>
    <description>contacts job title</description>
    <inlineHelpText>contacts job title</inlineHelpText>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>