Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Last_Consent_Requested__c.field-meta.xml
<CustomField>
    <fullName>IP_Last_Consent_Requested__c</fullName>
    <label>Last Consent Requested</label>
    <type>DateTime</type>
</CustomField>