Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Last_Consent_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>IP_Last_Consent_Requested_By__c</fullName>
    <label>Last Consent Requested by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>