Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_LastContactedGDPR__c.field-meta.xml
<CustomField>
    <fullName>IP_LastContactedGDPR__c</fullName>
    <description>System field that identifies the last time a candidate has had a GDPR ‘Meaningful contact’ interaction.</description>
    <label>Last contacted GDPR</label>
    <type>Date</type>
</CustomField>