Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_LastPassedToTempest2ndTier__c.field-meta.xml
<CustomField>
    <fullName>IP_LastPassedToTempest2ndTier__c</fullName>
    <label>Last Passed to Tempest (2nd Tier)</label>
    <type>DateTime</type>
</CustomField>