Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_LastpasstotempestPaye__c.field-meta.xml
<CustomField>
    <fullName>IP_LastpasstotempestPaye__c</fullName>
    <label>LastpasstotempestPaye</label>
    <summaryFilterItems>
        <field>IP_PayProfile__c.IP_LastPassedToTempest__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>IP_PayProfile__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>PAYE</value>
    </summaryFilterItems>
    <summaryForeignKey>IP_PayProfile__c.IP_Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>