Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_LastRecordedTermdate__c.field-meta.xml
<CustomField>
    <fullName>IP_LastRecordedTermdate__c</fullName>
    <description>populated from workflow via Cert: Study Timetable</description>
    <label>Course End Date</label>
    <type>Date</type>
</CustomField>