Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_LCC__c.field-meta.xml
<CustomField>
    <fullName>IP_LCC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LCC</label>
    <type>Checkbox</type>
</CustomField>