Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Link_Payprofile__c.field-meta.xml
<CustomField>
    <fullName>IP_Link_Payprofile__c</fullName>
    <label>Link Payprofile</label>
    <summaryFilterItems>
        <field>IP_PayProfile__c.IP_LastPassedToTempest__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>IP_PayProfile__c.IP_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>IP_PayProfile__c.IP_Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>