Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_LTDPayProfileCount__c.field-meta.xml
<CustomField>
    <fullName>IP_LTDPayProfileCount__c</fullName>
    <inlineHelpText>this is a count of active LTD company pay profiles</inlineHelpText>
    <label>LTD pay profile count</label>
    <summaryFilterItems>
        <field>IP_PayProfile__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>LTD</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>IP_PayProfile__c.IP_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>IP_PayProfile__c.IP_Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>