Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_MailingAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>IP_MailingAddressLine1__c</fullName>
    <description>This is a system field to populate information into back office</description>
    <label>Mailing Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>