Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_MailingAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>IP_MailingAddressLine2__c</fullName>
    <description>This is a system interface field as salesforce splits up the salesforce field address line information</description>
    <label>Mailing Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>