Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_MailingAddressLine3__c.field-meta.xml
<CustomField>
    <fullName>IP_MailingAddressLine3__c</fullName>
    <label>Mailing Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>