Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_MarkedForDeletion__c.field-meta.xml
<CustomField>
    <fullName>IP_MarkedForDeletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System field that identifies if the candidate needs to be deleted.</description>
    <label>Marked for deletion</label>
    <type>Checkbox</type>
</CustomField>