Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_MC2Tier__c.field-meta.xml
<CustomField>
    <fullName>IP_MC2Tier__c</fullName>
    <formula>IF( RecordType.Name == &apos;2nd Tier Candidate&apos; ,IF( IP_ComplianceConfirmedBy2ndTier__c,&quot;&quot;,&quot;Compliance Confirmed by 2nd Tier&quot; ),&quot;&quot;)</formula>
    <label>Missing compliance 2ndTier</label>
    <type>Text</type>
</CustomField>